Navbar: fix Home link alignment on mobile by overriding desktop padding

--- a/src/components/Navbar/Navbar.modules.css
+++ b/src/components/Navbar/Navbar.modules.css
@@ -235,6 +235,15 @@
     font-size: 16px;
   }
 
+  /* Override desktop padding on first and last mobile nav links */
+  .nav-links > a:first-child {
+    padding-left: 24px;
+  }
+
+  .nav-links > a:last-child {
+    padding-right: 24px;
+  }
+
   .nav-links a:last-child {
     border-bottom: none;
   }
